# router/route.go
@@ -74,7 +74,7 @@ func Route() {
 
 			//user_function
 			api.GET("/users/get_address/:user_id", middleware2.JWTMiddlewareUsers(), users_function.UsersGetAddress())
-			api.POST("/users/add_address", middleware2.JWTMiddlewareUsers(), users_function.UsersAddAddress())
+			api.POST("/users/add_address/:user_id", middleware2.JWTMiddlewareUsers(), users_function.UsersAddAddress())
 
 		}
 	}
